--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
       </div>
     </div>
     <script>
-      var port = window.location.host.indexOf('duostack') != -1 ? 9980 : 80
-        , socket = new io.Socket(null, {port: port, rememberTransport: false})
+      var socket = new io.Socket(null, {
+          transports: ['flashsocket', 'htmlfile', 'xhr-multipart', 'xhr-polling', 'jsonp-polling']
+        })
         , selected = []
         , cards = []
         , lastSets = {}
