disabling all flash/websocket support until further notice in regards to duostack

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
     <script>
       var socket = new io.Socket(null, {
-          transports: ['flashsocket', 'htmlfile', 'xhr-polling', 'jsonp-polling']
+          transports: ['htmlfile', 'xhr-polling', 'jsonp-polling']
         })
         , selected = []
         , cards = []
