--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>set - the game</title>
+    <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <script src="/jquery.transform.lite.js"></script>
