use updated socket.io.js and minified version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>set - the game</title>
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
-    <script src="/_socket.io.js"></script>
+    <script src="/_socket.io.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <script src="/jquery.transform.lite.js"></script>
     <style>
