--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>set - the game</title>
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
+    <!--[if IE 8]>
+    <script src="/ie.js"></script>
+    <![endif]-->
     <script src="/_socket.io.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <script src="/jquery.transform.lite.js"></script>
@@ -23,21 +26,26 @@
           position: relative;
           width: 540px;
       }
-      #board {
-
-      }
+      #board {}
        #board tr {
            height: 75px
        }
        #board td {
            width: 110px;
+           height: 75px;
            position: relative;
+           top: 0;
        }
+      .cardwrap {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
       .card {
           border: 2px solid #444;
           position: absolute;
-          margin-top: -33px;
-          margin-left: 6px;
+          top: 5px;
+          left: 5px;
           -webkit-user-select: none;
           -khtml-user-select: none;
           -moz-user-select: none;
@@ -149,8 +157,8 @@
       var socketPort = window.location.host.indexOf('setgame') != -1 ? 9980 : 80
         , socket = new io.Socket(null, {
               port: 80
-            , rememberTransport: false
             , transports: ['websocket', 'xhr-polling', 'jsonp-polling']
+            , rememberTransport: false
             , transportOptions: {
                   websocket: { port: socketPort }
               }
@@ -172,11 +180,13 @@
           if (idx % 3 === 0) tr = $('<tr/>');
           var td = $('<td/>');
           var c = $('<img/>', {
-            class: 'card'
+            'class': 'card'
           , src: '/cards/' + (1 + card.number  + card.color * 3 + card.shape * 9 + card.shading * 27) + '.gif'
           });
           cards.push(c);
-          td.append(c);
+          var w = $('<div class="cardwrap"></div>');
+          w.append(c);
+          td.append(w);
           tr.append(td);
           if (idx % 3 === 0) $('#board').append(tr);
         });
@@ -267,12 +277,12 @@
           p.prepend(
             $('<span/>', {
               html: '&raquo;'
-            , class: 'me-indicator' }));
+            , 'class': 'me-indicator' }));
             
           p.append($('<a/>', {
                     href: ''
                   , id: 'hint'
-                  , class: 'button'
+                  , 'class': 'button'
                   , html: '<span>I don\'t see a set!</span></button>'
                   , click: hint }));
           return;
@@ -335,7 +345,7 @@
                   , easing: 'easeOutQuad'
                   , complete: function() {
                       $(this).css('transform', 'translateX(0px) translateY(0px) rotate(450deg) scale(0.5)');
-                      $(this).css('top', 24 + 'px');
+                      $(this).css('top', '-5px');
                       $(this).css('left', (133 + j * 33) + 'px');
                       $(this).appendTo(p);
                     }
@@ -403,7 +413,6 @@
       $(document).bind('mousedown', function(event) {
         var target = $(event.target)[0];
         var idx = cards.map( function(v) { return v[0]; } ).indexOf(target);
-        log(idx);
 
         if (idx != -1) {
           select(idx);
