move client code to its own directory

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <script src="/jquery.transform.lite.js"></script>
     <script src="client.js"></script>
+  </head>
   <body>
     <div id="wrap">
       <table id="board"></table>
