beginnings of a UI refresh

--- a/client/index.html
+++ b/client/index.html
@@ -18,39 +18,49 @@
       <table id="board"></table>
       <div id="side">
         <ul id="scoreboard">
-        <li class="player" id="p0">
-          <span class="score">0</span> <span class="name">Player 1</span>
-          <div class="puzzled">&hellip; doubts the existence of a set</div>
+        <li id="p0">
+          <h2>0</h2>
+          <h3>Player 1</h3>
+          <span class="puzzled">?</span>
         </li>
-        <li class="player" id="p1">
-          <span class="score">0</span> <span class="name">Player 2</span>
-          <div class="puzzled">&hellip; doesn't see a set</div>
+        <li id="p1">
+          <h2>0</h2> 
+          <h3>Player 2</h3>
+          <span class="puzzled">?</span>
         </li>
-        <li class="player" id="p2">
-          <span class="score">0</span> <span class="name">Player 3</span>
-          <div class="puzzled">&hellip; could use a hint</div>
+        <li id="p2">
+          <h2>0</h2>
+          <h3>Player 3</h3>
+          <span class="puzzled">?</span>
         </li>
-        <li class="player" id="p3">
-          <span class="score">0</span> <span class="name">Player 4</span>
-          <div class="puzzled">&hellip; thinks we should deal out a few more</div>
+        <li id="p3">
+          <h2>0</h2>
+          <h3>Player 4</h3>
+          <span class="puzzled">?</span>
         </li>
-        <li class="player" id="p4">
-          <span class="score">0</span> <span class="name">Player 5</span>
-          <div class="puzzled">&hellip; grows impatient</div>
+        <li id="p4">
+          <h2>0</h2>
+          <h3>Player 5</h3>
+          <span class="puzzled">?</span>
         </li>
-        <li class="player" id="p5">
-          <span class="score">0</span> <span class="name">Player 6</span>
-          <div class="puzzled">&hellip; needs a hand</div>
+        <li id="p5">
+          <h2>0</h2>
+          <h3>Player 6</h3>
+          <span class="puzzled">?</span>
         </li>
-        <li class="player" id="p6">
-          <span class="score">0</span> <span class="name">Player 7</span>
-          <div class="puzzled">&hellip; is sure no set exists</div>
+        <li id="p6">
+          <h2>0</h2>
+          <h3>Player 7</h3>
+          <span class="puzzled">?</span>
         </li>
-        <li class="player" id="p7">
-          <span class="score">0</span> <span class="name">Player 8</span>
-          <div class="puzzled">&hellip; is honestly just here for the free food</div>
+        <li id="p7">
+          <h2>0</h2>
+          <h3>Player 8</h3>
+          <span class="puzzled">?</span>
         </li>
         </ul>
+        <a href="" id="hint" class="button"><span>I don't see a set!</span></a>
+        <span id="me-indicator">&raquo;</span>
       </div>
     </div>
   </body>
