--- a/client/index.html
+++ b/client/index.html
@@ -58,10 +58,13 @@
           <span class="puzzled">?</span>
         </li>
         </ul>
-        <a href="" id="hint" class="button"><span>I don't see a set!</span></a>
         <span id="me-indicator">&raquo;</span>
       </div>
-      <table id="board"></table>      
+      <table id="board">
+        <tfoot><tr><td colspan="3">
+          <a href="" id="hint" class="button"><span>I don't see a set!</span></a>
+        </td></tr></tfoot>
+      </table>      
       <ul id="chat">
         <li>
           <div class="message event">Chat in realtime while you play.</div></li>
