auto chat focus

--- a/client/index.html
+++ b/client/index.html
@@ -73,7 +73,7 @@
     <div id="footer">
       <form id="form">
         <label for="input">Type here to chat:</label>
-        <textarea rows="10" cols="10" wrap="hard" autocomplete="off" id="input"></textarea>
+        <textarea wrap="hard" autocomplete="off" spellcheck="false" id="input"></textarea>
       </form>
     </div>
   </body>
