use asset manager to consolidate/minify css/js

--- a/client/index.html
+++ b/client/index.html
@@ -3,16 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>set - the game</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/static/style.css" />
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
-    <!--[if IE]>
-    <script src="/ie.js"></script>
-    <![endif]-->
-    <script src="/_socket.io.min.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="/jquery.transform.lite.js"></script>
-    <script src="/jquery.ba-bbq.min.js"></script>
-    <script src="client.js"></script>
+    <script src="/static/client.js"></script>
   </head>
   <body>
     <div id="wrap">
