changes to socket.io config for no.de hosting

--- a/client/game.html
+++ b/client/game.html
@@ -5,6 +5,7 @@
     <title>set - the game</title>
     <link rel="stylesheet" href="/static/style.css" />
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/static/client.js"></script>
   </head>
   <body>
