www removal, url tinkering

--- a/client/game.html
+++ b/client/game.html
@@ -61,9 +61,9 @@
           <li id="hint" class="message cornered">
             <a>Click me if you need a hint</a>
           </li>
-          <li class="message cornered">
-            Share this URL to invite others to join:
-            <pre>http://localhost/game/#!/A77DRT</pre>
+          <li id ="share" class="message cornered">
+            Share this URL to invite other people:
+            <pre></pre>
           </li>
         </ul>
       </div>
