select url tweaks

--- a/client/game.html
+++ b/client/game.html
@@ -63,7 +63,7 @@
           </li>
           <li id ="share" class="message cornered">
             Share this URL to invite other people:
-            <pre></pre>
+            <input type="text" value="Test"></input>
           </li>
         </ul>
       </div>
