basic session management for game rejoining

--- a/client/game.html
+++ b/client/game.html
@@ -16,41 +16,49 @@
           <h2>0</h2>
           <h3>Player 1</h3>
           <span class="puzzled">?</span>
+          <span class="offline">OFFLINE</span>
         </li>
         <li id="p1">
           <h2>0</h2> 
           <h3>Player 2</h3>
           <span class="puzzled">?</span>
+          <span class="offline">OFFLINE</span>
         </li>
         <li id="p2">
           <h2>0</h2>
           <h3>Player 3</h3>
           <span class="puzzled">?</span>
+          <span class="offline">OFFLINE</span>
         </li>
         <li id="p3">
           <h2>0</h2>
           <h3>Player 4</h3>
           <span class="puzzled">?</span>
+          <span class="offline">OFFLINE</span>
         </li>
         <li id="p4">
           <h2>0</h2>
           <h3>Player 5</h3>
           <span class="puzzled">?</span>
+          <span class="offline">OFFLINE</span>
         </li>
         <li id="p5">
           <h2>0</h2>
           <h3>Player 6</h3>
           <span class="puzzled">?</span>
+          <span class="offline">OFFLINE</span>
         </li>
         <li id="p6">
           <h2>0</h2>
           <h3>Player 7</h3>
           <span class="puzzled">?</span>
+          <span class="offline">OFFLINE</span>
         </li>
         <li id="p7">
           <h2>0</h2>
           <h3>Player 8</h3>
           <span class="puzzled">?</span>
+          <span class="offline">OFFLINE</span>
         </li>
         </ul>
         <span id="me-indicator">&raquo;</span>
