--- a/client/index.html
+++ b/client/index.html
@@ -18,16 +18,8 @@
     </ul>
     <ul style="margin:0 200px 0 250px;">
       <li class="message cornered">
-      Set is a game about pattern matching.
-      </li>
-      <li class="message cornered">
-      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus ullamcorper felis ac mi vulputate luctus. Quisque lectus libero, sollicitudin et condimentum vitae, malesuada vel metus. Donec nulla velit, tempus at semper sit amet, sodales in libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque mattis tellus ac arcu adipiscing ut posuere metus ultrices. Donec feugiat ultricies ornare. Proin ac ante nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam lacinia nisi vehicula turpis pulvinar in faucibus elit condimentum. Vestibulum sollicitudin leo quis nisi consequat sed imperdiet orci pharetra. Etiam eget luctus purus. Nunc feugiat libero non nibh laoreet eget commodo lorem interdum. Vivamus semper enim eu augue posuere sed sagittis enim porttitor. Aenean iaculis, metus a auctor ultrices, turpis odio faucibus est, ut molestie lorem sapien et lorem. Nulla dapibus, lectus non porttitor tristique, lectus orci pulvinar urna, vitae semper lectus nisl a magna. Vestibulum tempor urna ut nulla bibendum faucibus. Praesent eu volutpat massa. 
-      </li>
-      <li class="message cornered">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor molestie convallis. Sed in dui ante. Fusce mollis, lorem vitae laoreet mollis, ligula ipsum congue elit, vitae ultricies sem erat id nunc. Aenean a velit eget augue rhoncus elementum nec vitae nunc. Donec eget arcu eros. Nunc viverra cursus laoreet. Maecenas ac velit vel neque tincidunt aliquet. Vestibulum et risus eu sem scelerisque vestibulum. Nullam imperdiet eleifend nulla et ornare. Nam aliquam sapien quis neque laoreet ac aliquet sapien imperdiet. Donec iaculis, nisi ac pellentesque ultrices, turpis dui cursus nisl, id varius quam dui imperdiet ante.
-      </li>
-      <li class="message cornered">
-      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus ullamcorper felis ac mi vulputate luctus. Quisque lectus libero, sollicitudin et condimentum vitae, malesuada vel metus. Donec nulla velit, tempus at semper sit amet, sodales in libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque mattis tellus ac arcu adipiscing ut posuere metus ultrices. Donec feugiat ultricies ornare. Proin ac ante nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam lacinia nisi vehicula turpis pulvinar in faucibus elit condimentum. Vestibulum sollicitudin leo quis nisi consequat sed imperdiet orci pharetra. Etiam eget luctus purus. Nunc feugiat libero non nibh laoreet eget commodo lorem interdum. Vivamus semper enim eu augue posuere sed sagittis enim porttitor. Aenean iaculis, metus a auctor ultrices, turpis odio faucibus est, ut molestie lorem sapien et lorem. Nulla dapibus, lectus non porttitor tristique, lectus orci pulvinar urna, vitae semper lectus nisl a magna. Vestibulum tempor urna ut nulla bibendum faucibus. Praesent eu volutpat massa. 
+      Set is a game about pattern matching. The idea is to find sets of 3 cards that meet certain
+      requirements.
       </li>
     </ul>
   </div>
