basic public matchmaking

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <div id="wrap">
     <ul style="width: 225px; float: left; position: fixed">
       <li class="message cornered">
-        <a href="/game/">join a public game</a>
+        <a href="/game/public/">join a public game</a>
       </li>
       <li class="message cornered">
         <a href="/game/">create a private session</a>
