--- a/public/game.html
+++ b/public/game.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>set - the game</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/static/client.js"></script>
+    <script src="/client.js"></script>
     <!--
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="/jquery.ba-bbq.js"></script>
