--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>set - the game</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
   </head>
   <body>
