minor marketing copy, start script

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,16 @@
     </ul>
     <ul style="margin:0 200px 0 250px;">
       <li class="message cornered">
-      Set is a game about pattern matching. The idea is to find sets of 3 cards that meet certain
-      requirements.
+      <p>
+      MultiplayerSet is a game about pattern matching. The idea is to find sets of 3 cards that 
+      meet certain requirements. Each card has a variety of shapes on it. The properties that
+      can vary are <b>number</b> (of shapes), <b>shape</b>, <b>color</b>, and <b>shading</b>.
+      </p>
+      <p>
+      A set is 3 cards for which each card has, for each property, 3 different properties or 1
+      uniform property. Two cards that are both red and a third that is green are <b>not</b> a
+      set.
+      </p>
       </li>
     </ul>
   </div>
