trying out new graphics

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>set - the game</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
+    <link rel="stylesheet" href="/style.css"/>
+    <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico"/>
   </head>
   <body>
   <div id="wrap">
     <ul style="width: 225px; float: left; position: fixed">
       <li class="message cornered">
-        <a href="/game/public/">join a public game</a>
+        <a href="/game/">start a private game</a>
       </li>
       <li class="message cornered">
-        <a href="/game/">create a private session</a>
+        <a href="/game/public/">join a public game</a>
       </li>
     </ul>
     <ul style="margin:0 200px 0 250px;">
