adding card display and instruction to main page

--- a/public/game.html
+++ b/public/game.html
@@ -91,5 +91,6 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/client.js"></script>
+    <script>$(document.body).ready(startGame);</script>
   </body>
 </html>
