touchup some copy

--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,15 @@
       <li class="message cornered">
       <p>
       MultiplayerSet is a game about pattern matching. The idea is to find 
-      <b>sets</b> of 3 cards that meet certain requirements. Each card has a 
-      four properties. The properties are <b>number</b> (of shapes), 
+      <b>sets</b> of three cards that meet certain requirements. Each card has a 
+      four properties. The properties are <b>amount</b> (of shapes), 
       <b>shape</b>, <b>color</b>, and <b>shading</b>.
       </p>
       </li>
       <li class="message cornered">
       <p>
-      A <b>set</b> is 3 cards for which each card has, for each property, 3 
-      different properties or 1 uniform property. Two cards that are both red 
+      A <b>set</b> is three cards for which each card has, for each property, three
+      different properties or one uniform property. Two cards that are both red 
       and a third that is green are <b>not</b> a set.
       </p>
       </li>
@@ -40,7 +40,7 @@
         <div class="cardwrap" number="0" color="2" shape="0" shading="2"></div>
       </div>
       <p>
-      Here all the cards have the same <b>shape</b> (oval) and <b>number</b>
+      Here all the cards have the same <b>shape</b> (oval) and <b>amount</b>
       (one) but different <b>shadings</b> and <b>colors</b>.
       </p>
       <div class="set">
@@ -84,11 +84,12 @@
       <h2>How to play</h2>
       <p>
       If you want to play with friends, hit <b>start a private game</b> in the top
-      left. You will receive a link you can use to invite other people to join.
+      left of this page. You will receive a link you can use to invite other people
+      to join.
       </p>
       <p>
-      If you want to get into a game quickly, hit <b>join private game</b>. You will
-      be placed into a game that will start as soon as 3 people are present. You
+      If you want to get into a game quickly, hit <b>join a public game</b>. You will
+      be placed into a game that will start as soon as three people are present. You
       can still invite your friends to join a public game in the same way.
       </p>
       <p>
