--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
       </div>
       <p>
       Identical to the first example set except that two of the cards are red,
-      and the other yellow. If one of the red cards were blue or if all three
+      and the other green. If one of the red cards were blue or if all three
       cards were red, it would be a set.
       </p>
       <div class="set">
