--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
   <div id="wrap">
-    <ul style="width: 225px; float: left; position: fixed">
+    <ul id="menu">
       <li class="message cornered">
-        <a href="/game/">start a private game</a>
+        <a href="/game/"><h2>start a private game</h2></a>
       </li>
       <li class="message cornered">
-        <a href="/game/public/">join a public game</a>
+        <a href="/game/public/"><h2>join a public game</h2></a>
       </li>
     </ul>
-    <ul style="margin:0 200px 0 250px;">
+    <ul id="explanation">
       <li class="message cornered">
       <p>
       MultiplayerSet is a game about pattern matching. The idea is to find
@@ -34,6 +34,7 @@
       </li>
       <li class="message cornered">
       <h2>Examples of VALID sets</h2>
+      <div class="clear"></div>
       <div class="set">
         <div class="cardwrap" number="0" color="0" shape="0" shading="0"></div>
         <div class="cardwrap" number="0" color="1" shape="0" shading="1"></div>
@@ -43,6 +44,7 @@
       Here all the cards have the same <b>shape</b> (oval) and <b>amount</b>
       (one) but different <b>shadings</b> and <b>colors</b>.
       </p>
+      <div class="clear"></div>
       <div class="set">
         <div class="cardwrap" number="2" color="2" shape="0" shading="0"></div>
         <div class="cardwrap" number="1" color="0" shape="1" shading="1"></div>
@@ -51,6 +53,7 @@
       <p>
       In this set, all four attributes are different across all three cards.
       </p>
+      <div class="clear"></div>
       </li>
       <li class="message cornered">
       <h2>Examples of INVALID sets</h2>
@@ -69,6 +72,7 @@
       and the other green. If one of the red cards were blue or if all three
       cards were red, it would be a set.
       </p>
+      <div class="clear"></div>
       <div class="set">
         <div class="cardwrap" number="1" color="0" shape="1" shading="0"></div>
         <div class="cardwrap" number="2" color="2" shape="2" shading="1"></div>
@@ -79,6 +83,7 @@
       If all the cards were diamond and hollow, it would be a set. Alternatively,
       if the last card was a striped squiggly shape, it would also be a set.
       </p>
+      <div class="clear"></div>
       </li>
       <li class="message cornered">
       <h2>How to play</h2>
