more ui tweaks, buttons

--- a/public/game.html
+++ b/public/game.html
@@ -63,12 +63,12 @@
       <div id="boardwrap">
         <table id="board"></table>
         <ul>
-          <li id="training" class="message cornered">
-            This game is in practice mode<br/>
-            pending <b></b> more player(s).
-          </li>
-          <li id="hint" class="message cornered">
-            <a>Click me if you need a hint</a>
+          <li id="hint">
+            <div id="training" class="message cornered">
+              This game is in practice mode<br/>
+              pending <b></b> more player(s).
+            </div>
+            <a class="button"><h2>HINT</h2></a>
           </li>
           <li id ="share" class="message cornered">
             Share this URL to invite other people:
@@ -78,7 +78,7 @@
       </div>
       <ul id="chat">
         <li>
-          <div class="message event cornered">Chat in realtime while you play.</div>
+          <div class="message cornered">Chat in realtime while you play.</div>
         </li>
       </ul>
     </div>
