--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
   <body>
   <div id="wrap">
     <ul id="menu">
-      <li class="message cornered">
-        <a href="/game/"><h2>start a private game</h2></a>
+      <li>
+        <a class="button" href="/game/"><h2>start a private game</h2></a>
       </li>
-      <li class="message cornered">
-        <a href="/game/public/"><h2>join a public game</h2></a>
+      <li>
+        <a class="button" href="/game/public/"><h2>join a public game</h2></a>
       </li>
     </ul>
     <ul id="explanation">
