more font and header tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
       <h3>Hints</h3>
       <p>
       If you need a hint or don't see a set on the board (which can happen), use
-      <b>"click me if you need a hint"</b>. If the majority of players do this, the
+      the <b>HINT</b> button. If the majority of players do this, the
       game will reveal one card of a set on the board. If there are none, the game
       will deal three additional cards.
       </p>
