gradient change, hint tweaks

--- a/public/game.html
+++ b/public/game.html
@@ -64,11 +64,11 @@
         <table id="board"></table>
         <ul>
           <li id="hint">
-            <div id="training" class="message cornered">
+            <div id="training">
               This game is in practice mode<br/>
               pending <b></b> more player(s).
             </div>
-            <a class="button"><h2>HINT</h2></a>
+            <a class="button"><h3>HINT</h3></a>
           </li>
           <li id ="share" class="message cornered">
             Share this URL to invite other people:
