fixing hint click behavior

--- a/public/game.html
+++ b/public/game.html
@@ -63,12 +63,12 @@
       <div id="boardwrap">
         <table id="board"></table>
         <ul>
-          <li id="hint">
+          <li>
             <div id="training">
               This game is in practice mode<br/>
               pending <b></b> more player(s).
             </div>
-            <a class="button"><h3>HINT</h3></a>
+            <a id="hint" class="button"><h3>HINT</h3></a>
           </li>
           <li id ="share" class="message cornered">
             Share this URL to invite other people:
