hint button hiding and offline message

--- a/public/game.html
+++ b/public/game.html
@@ -14,49 +14,49 @@
           <h2>0</h2>
           <h3>Player 1</h3>
           <span class="puzzled">?</span>
-          <span class="offline">OFFLINE</span>
+          <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p1">
           <h2>0</h2>
           <h3>Player 2</h3>
           <span class="puzzled">?</span>
-          <span class="offline">OFFLINE</span>
+          <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p2">
           <h2>0</h2>
           <h3>Player 3</h3>
           <span class="puzzled">?</span>
-          <span class="offline">OFFLINE</span>
+          <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p3">
           <h2>0</h2>
           <h3>Player 4</h3>
           <span class="puzzled">?</span>
-          <span class="offline">OFFLINE</span>
+          <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p4">
           <h2>0</h2>
           <h3>Player 5</h3>
           <span class="puzzled">?</span>
-          <span class="offline">OFFLINE</span>
+          <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p5">
           <h2>0</h2>
           <h3>Player 6</h3>
           <span class="puzzled">?</span>
-          <span class="offline">OFFLINE</span>
+          <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p6">
           <h2>0</h2>
           <h3>Player 7</h3>
           <span class="puzzled">?</span>
-          <span class="offline">OFFLINE</span>
+          <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p7">
           <h2>0</h2>
           <h3>Player 8</h3>
           <span class="puzzled">?</span>
-          <span class="offline">OFFLINE</span>
+          <h1 class="offline">OFFLINE</h1>
         </li>
         </ul>
       </div>
@@ -71,7 +71,7 @@
             <a id="hint" class="button"><h3>HINT</h3></a>
           </li>
           <li id ="share" class="message cornered">
-            Share this URL to invite other people:
+            Share this URL to invite other people to join this game:
             <input type="text" value="Test"></input>
           </li>
         </ul>
